--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "application-name"
-  , "version": "0.0.1"
-  , "private": true
-  , "dependencies": {
-      "express": "2.5.10"
-    , "jade": ">= 0.26.1"
-    , "socket.io": ">= 0.9.6"
-  }
+    , "version": "0.0.1"
+    , "private": true
+    , "dependencies": {
+        "express": ">= 3.0.0rc5"
+        , "jade": ">= 0.27.6"
+        , "socket.io": ">= 0.9.10"
+    }
 }
